# SpekPy

./: README.md  pyproject.toml  setup.py
spekpy/: DataTables.py  SpekAniso.py  SpekModel.py  SpekPy.py  SpekTools.py  __init__.py
spekpy/data/tables/advanced/: CSDA.npz  FluorescenceZ24.npz  FluorescenceZ29.npz  FluorescenceZ47.npz  FluorescenceZ79.npz  MassAttCoeff_Z24.npz  MassAttCoeff_Z24_woRa.npz  MassAttCoeff_Z29.npz  MassAttCoeff_Z29_woRa.npz  MassAttCoeff_Z47.npz  MassAttCoeff_Z47_woRa.npz  MassAttCoeff_Z79.npz  MassAttCoeff_Z79_woRa.npz  NIST.npz  Z24ch.npz  Z29_1.npz  Z29_2.npz  Z29_3.npz  Z29_4.npz  Z29_5.npz  Z29_6.npz  Z29ch.npz  Z47ch.npz  Z79ch.npz
tests/: metrics_for_different_transmission_targets.json  test_SpekPy.py
