[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "spekpy"
version = "2.5.3"
description="A Python software toolkit for modelling the x-ray spectra from x-ray tubes"
authors = [
    {name = "Gavin Poludniowski", email = "gpoludniowski@gmail.com"},
    {name = "Robert Bujila"},
]

# Required dependencies for install/usage of your package or application
# If you don't have any dependencies, leave this section empty
# Format for dependency strings: https://peps.python.org/pep-0508/
dependencies = [
    "scipy",
    "matplotlib"
]

license = "MIT"
license-files = ["license.txt"]

[project.urls]
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
Homepage = "https://bitbucket.org/spekpy/spekpy_release"

[tool.setuptools]
include-package-data = true

# Non-code data that should be included in the package source code
# https://setuptools.pypa.io/en/latest/userguide/datafiles.html
[tool.setuptools.package-data]
spekpy = [
"data/tables/*.dat",
"data/matl_def/*.comp",
"data/matl_usr/*.comp",
"data/state_usr/*.state",
"data/state_def/*.state",
"data/tables/advanced/*.npz"
]
